Fix text alignment to center for titles

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -18,9 +18,13 @@ blockquote {
 }
 
 blockquote .quote::before {
-  content: '\201C';
+  content: "\201C";
 }
 
 blockquote .quote::after {
-  content: '\201D';
+  content: "\201D";
+}
+
+.section-title {
+  text-align: center;
 }
